--- a/pom.xml
+++ b/pom.xml
@@ -206,6 +206,7 @@
                 <artifactId>site-maven-plugin</artifactId>
                 <version>0.9</version>
                 <configuration>
+                    <server>github</server>
                     <path>${project.version}</path>
                     <message>Creating site for ${project.name} ${project.version}</message>
                     <merge>true</merge>
