--- a/pom.xml
+++ b/pom.xml
@@ -14,7 +14,7 @@
 
     <groupId>io.dropwizard.modules</groupId>
     <artifactId>dropwizard-protobuf</artifactId>
-    <version>0.7.1-1-SNAPSHOT</version>
+    <version>0.7.1-1</version>
     <packaging>jar</packaging>
     
     <name>Dropwizard Protocol Buffers Support</name>
@@ -33,7 +33,7 @@
         <developerConnection>scm:git:git@github.com:dropwizard/dropwizard-protobuf.git</developerConnection>
         <connection>scm:git:https://github.com/dropwizard/dropwizard-protobuf.git</connection>
         <url>https://github.com/dropwizard/dropwizard-protobuf</url>
-      <tag>HEAD</tag>
+      <tag>v0.7.1-1</tag>
   </scm>
 
     <ciManagement>
