--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
 
     <groupId>io.dropwizard.modules</groupId>
     <artifactId>dropwizard-protobuf</artifactId>
-    <version>0.7.1-2-SNAPSHOT</version>
+    <version>0.7.1-2</version>
     <packaging>jar</packaging>
     
     <name>Dropwizard Protocol Buffers Support</name>
@@ -26,7 +26,7 @@
         <developerConnection>scm:git:git@github.com:dropwizard/dropwizard-protobuf.git</developerConnection>
         <connection>scm:git:https://github.com/dropwizard/dropwizard-protobuf.git</connection>
         <url>https://github.com/dropwizard/dropwizard-protobuf</url>
-        <tag>HEAD</tag>
+        <tag>v0.7.1-2</tag>
     </scm>
 
     <ciManagement>
