Added maven-protoc-plugin and removed generated source and test files, since they are different with each version of protocol buffers. Moved proto files to directories that are recognized by maven-protoc plugin. Added .gitignore file.

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,39 @@
-.DS_Store
+######################
+# Logs
+######################
+*.log
+/logs
+
+######################
+# Build output directies
+######################
+/target
+*/target
+/build
+*/build
+
+######################
+# Eclipse specific files/directories
+######################
 .classpath
 .project
 .settings
-target
+.metadata
+
+######################
+# IntelliJ specific files/directories
+######################
+out
+.idea
+*.ipr
+*.iws
+*.iml
+atlassian-ide-plugin.xml
+
+######################
+# OS generated files
+######################
+.DS_Store*
+ehthumbs.db
+Icon?
+Thumbs.db
