Updates for Dropwizard 0.8

--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
 
     <groupId>io.dropwizard.modules</groupId>
     <artifactId>dropwizard-protobuf</artifactId>
-    <version>0.7.1-4-SNAPSHOT</version>
+    <version>0.8.0-1-SNAPSHOT</version>
     <packaging>jar</packaging>
     
     <name>Dropwizard Protocol Buffers Support</name>
@@ -82,7 +82,7 @@
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
-        <dropwizard.version>0.7.1</dropwizard.version>
+        <dropwizard.version>0.8.0</dropwizard.version>
         <protobuf.version>2.6.1</protobuf.version>
     </properties>
 
@@ -178,6 +178,7 @@
                 <version>2.10.1</version>
                 <configuration>
                     <additionalparam>${javadoc.doclint.none}</additionalparam>
+                    <quiet>true</quiet>
                 </configuration>
                 <executions>
                     <execution>
@@ -199,7 +200,7 @@
             <plugin>
                 <groupId>com.github.github</groupId>
                 <artifactId>site-maven-plugin</artifactId>
-                <version>0.10</version>
+                <version>0.11</version>
                 <configuration>
                     <path>${project.version}</path>
                     <message>Creating site for ${project.name} ${project.version}</message>
@@ -222,10 +223,16 @@
                 <configuration>
                     <formats>
                         <format>xml</format>
-                        <format>html</format>
                     </formats>
                     <aggregate>true</aggregate>
                 </configuration>
+                <dependencies>
+                    <dependency>
+                        <groupId>net.sourceforge.cobertura</groupId>
+                        <artifactId>cobertura</artifactId>
+                        <version>2.1.1</version>
+                    </dependency>
+                </dependencies>
             </plugin>
             <plugin>
                 <groupId>org.eluder.coveralls</groupId>
@@ -278,12 +285,17 @@
                     <reportSet>
                         <reports>
                             <report>index</report>
+                            <report>summary</report>
                             <report>dependency-info</report>
-                            <report>dependencies</report>
-                            <report>issue-tracking</report>
-                            <report>scm</report>
                             <report>license</report>
+                            <report>scm</report>
+                            <report>issue-tracking</report>
+                            <report>mailing-list</report>
+                            <report>cim</report>
                             <report>project-team</report>
+                            <report>dependencies</report>
+                            <report>dependency-convergence</report>
+                            <report>modules</report>
                         </reports>
                     </reportSet>
                 </reportSets>
@@ -294,8 +306,16 @@
                 <version>2.10.1</version>
                 <configuration>
                     <additionalparam>${javadoc.doclint.none}</additionalparam>
-                    <show>public</show>
+                    <quiet>true</quiet>
                 </configuration>
+                <reportSets>
+                    <reportSet>
+                        <id>html</id>
+                        <reports>
+                            <report>javadoc</report>
+                        </reports>
+                    </reportSet>
+                </reportSets>
             </plugin>
         </plugins>
     </reporting>
