--- a/pom.xml
+++ b/pom.xml
@@ -101,7 +101,7 @@
     <dependencies>
         <dependency>
             <groupId>io.dropwizard</groupId>
-            <artifactId>dropwizard-jersey</artifactId>
+            <artifactId>dropwizard-core</artifactId>
         </dependency>
         <dependency>
             <groupId>com.google.protobuf</groupId>
