--- a/pom.xml
+++ b/pom.xml
@@ -14,7 +14,7 @@
     <description>Support for reading and writing Google Protocol Buffer objects</description>
     <url>https://github.com/dropwizard/dropwizard-protobuf</url>
 
-     <licenses>
+    <licenses>
         <license>
             <name>Apache 2.0</name>
             <url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
@@ -83,7 +83,7 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
         <javadoc.doclint.none>-Xdoclint:none</javadoc.doclint.none>
-        <dropwizard.version>1.1.0-rc3</dropwizard.version>
+        <dropwizard.version>1.1.0</dropwizard.version>
         <protobuf.version>3.2.0</protobuf.version>
     </properties>
 
