Upgrade to DW v1.1.1 and use the protobuf-maven-plugin

--- a/pom.xml
+++ b/pom.xml
@@ -83,8 +83,8 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
         <javadoc.doclint.none>-Xdoclint:none</javadoc.doclint.none>
-        <dropwizard.version>1.1.0</dropwizard.version>
-        <protobuf.version>3.2.0</protobuf.version>
+        <dropwizard.version>1.1.1</dropwizard.version>
+        <protobuf.version>3.3.0</protobuf.version>
     </properties>
 
     <dependencyManagement>
@@ -156,6 +156,13 @@
     </profiles>
 
     <build>
+        <extensions>
+            <extension>
+                <groupId>kr.motd.maven</groupId>
+                <artifactId>os-maven-plugin</artifactId>
+                <version>1.5.0.Final</version>
+            </extension>
+        </extensions>
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
@@ -164,8 +171,6 @@
                 <configuration>
                     <source>1.8</source>
                     <target>1.8</target>
-                    <optimize>true</optimize>
-                    <debug>true</debug>
                 </configuration>
             </plugin>
             <plugin>
@@ -270,6 +275,23 @@
                     <tagNameFormat>v@{project.version}</tagNameFormat>
                     <preparationGoals>clean test</preparationGoals>
                 </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.xolstice.maven.plugins</groupId>
+                <artifactId>protobuf-maven-plugin</artifactId>
+                <version>0.5.0</version>
+                <extensions>true</extensions>
+                <configuration>
+                    <protocArtifact>com.google.protobuf:protoc:${protobuf.version}:exe:${os.detected.classifier}</protocArtifact>
+                </configuration>
+                <executions>
+                    <execution>
+                        <goals>
+                            <goal>compile</goal>
+                            <goal>test-compile</goal>
+                        </goals>
+                    </execution>
+                </executions>
             </plugin>
         </plugins>
     </build>
