--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 
     <groupId>io.dropwizard.modules</groupId>
     <artifactId>dropwizard-protobuf</artifactId>
-    <version>1.3.0-3-SNAPSHOT</version>
+    <version>1.3.1-1</version>
     <packaging>jar</packaging>
 
     <name>Dropwizard Protocol Buffers Support</name>
@@ -23,7 +23,7 @@
         <developerConnection>scm:git:git@github.com:dropwizard/dropwizard-protobuf.git</developerConnection>
         <connection>scm:git:https://github.com/dropwizard/dropwizard-protobuf.git</connection>
         <url>https://github.com/dropwizard/dropwizard-protobuf</url>
-        <tag>HEAD</tag>
+        <tag>v1.3.1-1</tag>
     </scm>
 
     <ciManagement>
