--- a/pom.xml
+++ b/pom.xml
@@ -41,7 +41,7 @@
     </scm>
 
     <properties>
-        <protobuf.version>3.5.1</protobuf.version>
+        <protobuf.version>3.6.0</protobuf.version>
     </properties>
 
     <dependencies>
@@ -61,7 +61,7 @@
             <extension>
                 <groupId>kr.motd.maven</groupId>
                 <artifactId>os-maven-plugin</artifactId>
-                <version>1.5.0.Final</version>
+                <version>1.6.0</version>
             </extension>
         </extensions>
 
